--- a/templates/home.html
+++ b/templates/home.html
@@ -31,8 +31,8 @@
                            {{task.task}}
                             <span style="position: relative; float: right;">
                                 <a class="btn btn-success" href="{% url 'mark_as_done' task.id %}"><i class="fa fa-check"></i> Mark as Done</a>
-                                <a href = "" class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                                <a href = "" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                                <a href = "{% url 'delete_task' task.id %}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                                <a href = "{% url 'edit_task' task.id %}" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                             </span>
                         </div>
                     </div>
